# getrusty

./: .gitignore  Cargo.toml  LEARNING_PATH.md  README.md
by-example/: README.md
playground/: README.md
rustlings/exercises/02_functions/: functions1.rs
rustlings/exercises/03_if/: if1.rs
rustlings/exercises/04_primitive_types/: primitive_types3.rs  primitive_types4.rs
rustlings/exercises/05_vecs/: vecs1.rs
rustlings/exercises/07_structs/: structs1.rs  structs2.rs
rustlings/exercises/08_enums/: enums3.rs
rustlings/exercises/10_modules/: modules3.rs
rustlings/exercises/11_hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
rustlings/exercises/12_options/: options2.rs  options3.rs
rustlings/exercises/13_error_handling/: errors3.rs  errors4.rs
rustlings/exercises/15_traits/: traits3.rs
rustlings/exercises/17_tests/: tests2.rs
rustlings/exercises/18_iterators/: iterators4.rs  iterators5.rs
rustlings/exercises/quizzes/: quiz1.rs  quiz2.rs
the-book/: README.md
the-book/ch01/hello_world/: main
the-book/ch02/guessing_game/: Cargo.toml
the-book/ch02/guessing_game/src/: main.rs
the-book/ch03/controlflow/src/: main.rs
the-book/ch03/functions/src/: main.rs
the-book/ch03/shadowing/src/: main.rs
the-book/ch04/danglingpointer/: Cargo.toml
the-book/ch04/danglingpointer/src/: main.rs
the-book/ch04/ownership/src/: main.rs
the-book/ch04/referenceexample/: Cargo.toml
the-book/ch04/referenceexample/src/: main.rs
the-book/ch04/scopeexample/: Cargo.toml
the-book/ch04/scopeexample2/: Cargo.toml
the-book/ch04/slice/src/: main.rs
the-book/ch05/methods/src/: main.rs
the-book/ch05/rectangles/src/: main.rs
the-book/ch06/enum_example/src/: main.rs
the-book/ch07/structs_enums_accessors/: Cargo.toml
the-book/ch07/structs_enums_accessors/src/: main.rs
the-book/ch08/hashmaps/src/: main.rs
the-book/ch08/nested_structures/: Cargo.toml
the-book/ch08/nested_structures/src/: main.rs
the-book/ch09/error_propagating/: Cargo.toml
the-book/ch09/error_propagating/src/: main.rs
the-book/ch09/result_and_errors/: Cargo.toml
the-book/ch09/result_and_errors/src/: main.rs
the-book/ch10/generics_basics/: Cargo.toml
the-book/ch10/generics_basics/src/: main.rs
the-book/ch10/generics_exapanded/: Cargo.toml
the-book/ch10/generics_with_structs/: Cargo.toml
the-book/ch10/generics_with_structs/src/: main.rs
the-book/ch10/lifetimes/src/: main.rs
the-book/ch11/adder/src/: lib.rs
the-book/ch13/closures/src/: main.rs
